--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,5 @@ add date box to pallet entry
 whole nightmare with if settings are all set up
 add box for emtpy pallet weight, startup week, 
 check all settings there
+check that xmls are right, as in all there
+selinux stuff still isn't all ok. i don't know the best way to deal with selinux
