--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@ add box for emtpy pallet weight, startup week,
 check all settings there
 check that xmls are right, as in all there
 selinux stuff still isn't all ok. i don't know the best way to deal with selinux
+URGENT!! Deal with the nutritionist stuff
