--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,5 @@ check all settings there
 check that xmls are right, as in all there
 selinux stuff still isn't all ok. i don't know the best way to deal with selinux
 URGENT!! Deal with the nutritionist stuff
+urgent fill out birds restricted value
+clean up daily bot log
