--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,4 @@ selinux stuff still isn't all ok. i don't know the best way to deal with selinux
 URGENT!! Deal with the nutritionist stuff
 urgent fill out birds restricted value
 clean up daily bot log
+freeze timestamp cell and show only date on data entry page
