--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,10 @@ freeze timestamp cell and show only date on data entry page
 somethign with pallet stuff and weight
 add floor eggs wo having to manualy add
 remove stuff about starting services manually and just start the webapp and give appropiate message, and even open if we can
+i hate two settings files
+we need to hide some settings
+should settings go in .config??
+should really automate ftp script for my own sanity
+sql security?
+readme
+timezone stuff in settings
